The End git add . What a journey added footer and the thumbnails animation. Learnt a whole lot of jade and sass while doing so :)

--- a/index.jade
+++ b/index.jade
@@ -80,9 +80,66 @@ body
       .large-window 
         .window-tint
           .promo-text Fall Suits
-            strong from $99       
+            strong <span>from</span> $99  
+            a(href="").window-cta Shop Now  
+         
+      h1 Clothing Store
+              
+      hr
+      p
+        |I will also introduce a mechanism for caching using redis and a machine learning component for detecting what the user wants to see? I will update this as I go on:)
+      hr       
+      
+      
+      .blog-posts.row
+        
+        .post.columns.four.post-1
+          h5 Post title
+          img(src="images/posts/one.jpg")  
+          p BOOM BOOM STAR WARS BIG BOOKS AND BRESENHAM FUNCTION FOR LINE DRAWING 
+          p: a.button(href="") Read More
+          
+        .post.columns.four.post-2
+          h5 Post title
+          img(src="images/posts/two.jpg")  
+          p BOOM BOOM STAR WARS BIG BOOKS AND BRESENHAM FUNCTION FOR LINE DRAWING 
+          p: a.button(href="") Read More 
+            
+        .post.columns.four.post-3
+          h5 Post title
+          img(src="images/posts/three.jpg")  
+          p BOOM BOOM STAR WARS BIG BOOKS AND BRESENHAM FUNCTION FOR LINE DRAWING 
+          p: a.button(href="") Read More          
+
     
-    div(style="height:2000px")
+    
+  footer
+    .row.footer-stuff
+      .columns.three
+        strong FIND US ON
+        ul
+          li: a(href="") Twitter
+          li: a(href="") Twitter
+          li: a(href="") Pinterest
+          li: a(href="") Instagram
+          
+      .columns.three
+        strong OTHER SHOPS
+        ul
+          li: a(href="") Red Robin
+          li: a(href="") Emerald Eagle
+          li: a(href="") Crimson Crane
+          li: a(href="") Auburn Abbot
+      .columns.six
+        p <strong>Sign Up For Our NewsLetter</strong> I hope I become a really good web designer/developer
+          
+        form.row
+          .columns.eight
+            input.u-full-width(type="email" placeholder="Your Email")
+          .columns.four
+            input.button-primary(type="submit")
+                  
+                
 
   script(src="js/jquery.js")
   script(src="js/function.js")
