--- a/css/styles.sass
+++ b/css/styles.sass
@@ -15,6 +15,7 @@ figure
   background: white
   margin-bottom: 400px
   overflow: hidden
+  z-index: 2
 
   article
     padding: 100px 0
@@ -24,10 +25,6 @@ figure
 
 img
   max-width: 100%
-
-
-
-
 
 
 // Parallax
@@ -41,6 +38,7 @@ img
     position: top center
     attachment: fixed
   overflow: hidden
+  z-index: 2
 
 .logo
   height: 100px
@@ -129,23 +127,86 @@ img
   margin-top: 100px
   border-radius: 50%
   position: relative
+  margin-bottom: 50px
 
   .window-tint
     background-color: rgba(0,0,0,0.5)
     position: absolute
-      top: 0
-      left: 0
-      right: 0
-      bottom: 0
-      border-radius: 50%
-      display: flex
-      justify-content: center
-      align-item: center
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    border-radius: 50%
+    display: flex
+    justify-content: center
+    align-items: center
 
-    .promo-text
+
+  .promo-text
+    color: white
+    font-weight: 100
+    font-size: 50px
+    line-height: 1.2
+
+
+    strong
+      display: block
+      font-weight: 20
+      font-size: 30px
+
+    span
+      font:
+        weight: 300
+        size: 18px
+        style: italic
+      color: rgba(255,255,255,0.6)
+    .window-cta
+      font-size: 20px
+      text-decoration: none
       color: white
-      font-weight: 100
-      font-size: 50px
+      border: 1px solid white
+      padding: 10px 20px
+      transition: all 0.3s ease-in-out
 
-      strong
-        display:
+      &:hover
+        background: white
+        color: black
+
+//Posts
+
+.blog-posts
+  margin-top: 50px
+
+
+  .post
+    border: 1px solid #e1e1e1
+    padding: 20px 20px 0
+    background: white
+  .post-1
+    transform: translate(100px,20px)
+
+  .post-2
+    z-index: 2
+
+  .post-3
+    transform: translate(-100px,20px)
+
+
+//FOOTER
+footer
+  background: black
+  color: white
+  padding: 40px 0
+  position: fixed
+  bottom: 0
+  width: 100%
+
+  .footer-stuff
+    max-width: 640px
+    margin: 0 auto
+
+  a
+    color: white
+
+  input
+    color: #666
